Styling fix for galleries on smaller aspect ratios

--- a/css/main.css
+++ b/css/main.css
@@ -190,7 +190,7 @@ pre>code {
 
 @media (max-width:1662px) {
 	.gallery {
-	max-width: 1095px;
+	max-width: 730px;
 	}
 	#main-gallery {
 	max-width: 730px;
